--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,17 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- description de nous meme -->
 		<div>
+			<h1> Ma description </h1>
 			<p> je m'appelle Ernest BAKOUTA </p>
+		</div>
+		
+		
+		<!-- recompense -->
+		<div>
+			<h1> Mes récompense </h1>
+			<p> en construction... </p>
 		</div>
 		
 	
