--- a/hello.html
+++ b/hello.html
@@ -27,7 +27,7 @@
 		<!-- recompense -->
 		<div>
 			<h1> Mes récompense </h1>
-			<p> en construction... </p>
+			<p> <img src="images\medel_bronze.png"> </p>
 		</div>
 		
 		<!-- mon gist -->
