Ajout commande git pull

--- a/hello.html
+++ b/hello.html
@@ -36,6 +36,11 @@
 			<p> <script src="https://gist.github.com/furturBourgeois/53d3241447607a64699e0fa5e6fe40ad.js"></script> </p>
 		</div>
 		
+		<!-- commande git -->
+		<div>
+			<h1> Mes commandes </h1>
+			<p> git pull </p>
+		</div>
 		
 		
 	
